adjust dokku app

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Push to dokku
         uses: dokku/github-action@master
         with:
-          git_remote_url: 'ssh://dokku@apps.cakephp.org:22/book-vitepress'
+          git_remote_url: 'ssh://dokku@apps.cakephp.org:22/book-proxy'
           branch: 'newbook'
           git_push_flags: '-f'
           ssh_private_key: ${{ secrets.DOKKU_SSH_PRIVATE_KEY }}
